# envrs

./: README.md
.config/: nextest.toml
xtasks/: Cargo.toml
xtasks/scripts/: check-mr-title.sh  semantic-release-prepare.sh
