[package]
name = "envrs-xtasks"
version = "1.3.0"
edition = "2024"

[dependencies]
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
anyhow = "1.0.98"
ignore = "0.4.23"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
clap = { version = "4.5.41", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"] }
toml = "0.9.2"
chrono = { version = "0.4.35", features = ["serde"] }
glob = "0.3.1"
reqwest = { version = "0.12.9", features = ["json"] }
url = "2.5.4"

[dev-dependencies]
tempfile = "3.20.0"

